--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 resources/** filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.xlsx filter=lfs diff=lfs merge=lfs -text
+Project_Fault[[:space:]]Detection/** filter=lfs diff=lfs merge=lfs -text
